where-for-dinner-pre-init/templates/ingress.yaml
#@ load("@ytt:data", "data")
#@ load("@ytt:regexp", "regexp")

#@ def buildServiceName():
#@ serviceName = ""
#@ if data.values.gatewayType == 'tapscg':
#@ serviceName = data.values.gatewayName
#@ else:
#@ serviceName = "where-for-dinner"
#@ end
#@ return serviceName
#@ end

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: where-for-dinner-ingress
  namespace: #@ data.values.workloadNamespace
spec:
  virtualhost:
    fqdn: #@ regexp.replace("^(([^:/?#]+):)?(//([^/?#]*))?([^?#]*)(\?([^#]*))?(#(.*))?", data.values.appWorkloadURL, "$4")
  routes:
    - conditions:
        - prefix: /
      services:
        - name: #@ buildServiceName()
          port: 80
